# ec2-cli

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
src/: error.rs  main.rs
src/aws/: client.rs  infrastructure.rs  mod.rs
src/aws/ec2/: instance.rs
src/cli/commands/: config.rs  destroy.rs  list.rs  logs.rs  manual.rs  mod.rs  pull.rs  push.rs  scp.rs  ssh.rs  up.rs
src/config/: settings.rs
src/git/: config.rs  mod.rs  operations.rs  remote.rs  vcs.rs
src/profile/: loader.rs  mod.rs  schema.rs
src/state/: local.rs  mod.rs
src/user_data/: generator.rs  mod.rs
